# rapl

./: README.md
.github/workflows/: rust.yml
haskell/: Main.hs
javascript/: Main.js  RAPL.js  package-lock.json  package.json
python/: Main.py
rust-tcp-server-variant/rapl-lib/src/: ffi.rs
rust-tcp-server-variant/rapl-lib/src/rapl/: os_linux.rs
rust/rapl-bin/: Cargo.toml
rust/rapl-bin/src/: main.rs
rust/rapl-lib/: Cargo.toml
rust/rapl-lib/src/: ffi.rs  rapl.rs
rust/rapl-lib/src/rapl/: os_linux.rs  os_windows.rs
