[package]
name = "rapl-bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rapl-lib = { path = "../rapl-lib" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
bincode = { version = "2.0.0-rc", features = ["serde"] }
